--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <link rel="icon" type="image/png" sizes="72x72" href="./src/assets/favcoin.png">
+    <title>React AlexKaroh</title>
   </head>
   <body>
     <div id="root"></div>
